--- a/src/css/dist.css
+++ b/src/css/dist.css
@@ -1084,7 +1084,7 @@
   border: 1px solid transparent;
 }
 
-/* ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com */
+/* ! tailwindcss v3.3.6 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -1205,8 +1205,10 @@ strong {
 }
 
 /*
-1. Use the user's configured `mono` font family by default.
-2. Correct the odd `em` font sizing in all browsers.
+1. Use the user's configured `mono` font-family by default.
+2. Use the user's configured `mono` font-feature-settings by default.
+3. Use the user's configured `mono` font-variation-settings by default.
+4. Correct the odd `em` font sizing in all browsers.
 */
 
 code,
@@ -1215,8 +1217,12 @@ samp,
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
-  font-size: 1em;
+  font-feature-settings: normal;
   /* 2 */
+  font-variation-settings: normal;
+  /* 3 */
+  font-size: 1em;
+  /* 4 */
 }
 
 /*
@@ -3741,9 +3747,39 @@ video {
   opacity: 0.5;
 }
 
+header {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-bottom: 1px solid #dadada;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  background-color: #FFFFFF;
+}
+
+header .brand img {
+  height: 32px;
+}
+
+body[data-page="privacy"] .wrapper, body[data-page="subcontractors"] .wrapper {
+  width: 100%;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+}
+
 @media (min-width: 768px) {
+  body[data-page="privacy"] .wrapper, body[data-page="subcontractors"] .wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 820px;
+  }
+
   .md\:w-\[200px\] {
     width: 200px;
+  }
+
+  .md\:w-\[820px\] {
+    width: 820px;
   }
 
   .md\:px-20 {
