--- a/src/css/dist.css
+++ b/src/css/dist.css
@@ -1084,7 +1084,7 @@
   border: 1px solid transparent;
 }
 
-/* ! tailwindcss v3.3.6 | MIT License | https://tailwindcss.com */
+/* ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -1205,10 +1205,8 @@ strong {
 }
 
 /*
-1. Use the user's configured `mono` font-family by default.
-2. Use the user's configured `mono` font-feature-settings by default.
-3. Use the user's configured `mono` font-variation-settings by default.
-4. Correct the odd `em` font sizing in all browsers.
+1. Use the user's configured `mono` font family by default.
+2. Correct the odd `em` font sizing in all browsers.
 */
 
 code,
@@ -1217,12 +1215,8 @@ samp,
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
-  font-feature-settings: normal;
-  /* 2 */
-  font-variation-settings: normal;
-  /* 3 */
   font-size: 1em;
-  /* 4 */
+  /* 2 */
 }
 
 /*
@@ -3730,6 +3724,14 @@ video {
 
 .workitem#slippod {
   background-color: #DF5F38;
+}
+
+.workitem#textpixie {
+  background-color: #DBCA9A;
+}
+
+.workitem#textpixie .appicon {
+  padding-right: 2rem;
 }
 
 .vline {
